--- a/css/Research-styles.css
+++ b/css/Research-styles.css
@@ -1,12 +1,19 @@
 body {
-  font-family: "Ubuntu";
-  background-color: rgb(169, 169, 169);
+  font-family: "Montserrat";
+  background-color: white;
 }
 
 .titulo-1 {
   padding: 30px;
   display: inline-block;
   margin-top: 5%;
+}
+
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: black;
 }
 
 .jumbotron {
