--- a/css/ResP1-styles.css
+++ b/css/ResP1-styles.css
@@ -1,34 +1,40 @@
 body {
-    font-family: 'IBM Plex Serif', serif;
-    background-color: white;
-  }
+  font-family: "Montserrat";
+  background-color: white;
+}
 
-  #title {
-    background: transparent;
-    color: rgb(0, 0, 0);
+.navbar-brand {
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: black;
+}
+
+#title {
+  background: transparent;
+  color: rgb(0, 0, 0);
 }
 
 #title1 {
-    text-align: center;
-    margin-top: 100px;
-    font-family: 'IBM Plex Serif', serif;
+  text-align: center;
+  margin-top: 100px;
+  font-family: "IBM Plex Serif", serif;
 }
 
 #fourth-section {
-    background-color: rgb(75, 75, 75);
+  background-color: rgb(75, 75, 75);
 }
 
-
 .navbar-brand {
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: black;
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: black;
 }
 
 .navbar {
-    padding: 0 0 4.5rem;
-    font-size: 1.6rem;
+  padding: 0 0 4.5rem;
+  font-size: 1.6rem;
 }
 
 .nav-item {
@@ -36,58 +42,57 @@ body {
 }
 
 .container-fluid {
-    padding: 3% 15%;
+  padding: 3% 15%;
 }
 
 .belowBrand {
-    font-family: "Ubuntu";
-    font-size: 2.5rem;
-    font-weight: bold;
-    color: white;
+  font-family: "Ubuntu";
+  font-size: 2.5rem;
+  font-weight: bold;
+  color: white;
 }
 
 .social-media-icon {
-    margin: 10px 11px;
+  margin: 10px 11px;
 }
 
 .left-most-img {
-    margin-left: 0 ;
+  margin-left: 0;
 }
 
-.quote-final{
-    color: white;
-    margin-top: 16px;
+.quote-final {
+  color: white;
+  margin-top: 16px;
 }
 
 .research-box {
-    margin: 5% 8% 8% 5%;
-    padding: 0 20%;
-
+  margin: 5% 8% 8% 5%;
+  padding: 0 20%;
 }
 
 .research-body {
-    text-align: justify;
-    margin-bottom: 70px;
-    font-weight: 300;
+  text-align: justify;
+  margin-bottom: 70px;
+  font-weight: 300;
 }
 
 .research-subtitle {
-    font-size: 25px;
+  font-size: 25px;
 }
 
 .text-image {
-    text-align: center;
+  text-align: center;
 }
 
-#after-image-text{
-    margin-top: 5%;
+#after-image-text {
+  margin-top: 5%;
 }
 .map-image {
-    margin-bottom: 30px;
+  margin-bottom: 30px;
 }
 .image-footnote {
-    font-size: 0.7rem;
-    padding: 0 10%;
-    font-style: italic;
-    font-weight: 300;
+  font-size: 0.7rem;
+  padding: 0 10%;
+  font-style: italic;
+  font-weight: 300;
 }
